--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <a href="mailto:aadi@serververs.com" class="btn btn-primary">Send Me a Message</a>
                 <div class="social-icons-row">
                     <a href="https://linkedin.com/in/aadi2206" target="_blank" class="social-icon" title="LinkedIn"><i class="ri-linkedin-box-fill"></i><span>LinkedIn</span></a>
-                    <a href="https://x.com/aadi22o6" target="_blank" class="social-icon" title="X"><i class="ri-twitter-x-line"></i><span>X
+                    <a href="https://x.com/aadi22o6" target="_blank" class="social-icon" title="X"><i class="ri-twitter-x-fill"></i><span>X
                     <a href="https://github.com/aadi2206" target="_blank" class="social-icon" title="GitHub"><i class="ri-github-fill"></i><span>GitHub</span></a>
                     <a href="https://youtube.com/@aadi2206" target="_blank" class="social-icon" title="YouTube"><i class="ri-youtube-fill"></i><span>YouTube</span></a>
                     <a href="https://discord.com/users/aadi2206" target="_blank" class="social-icon" title="Discord"><i class="ri-discord-fill"></i><span>Discord</span></a>
