--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <h2 data-aos="fade-up">Building Beyond Myself</h2>
             <div class="serververse-card" data-aos="fade-up">
                 <div class="sv-logo">
-                    <img src="https://serververse.in/assets/images/3-bg-removed-192x192.webp" alt="Serververse Logo">
+                    <img src="https://serververs.com/assets/images/3-bg-removed.ico" alt="Serververse Logo">
                 </div>
                 <div class="sv-content">
                     <h3>Serververse</h3>
